<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="welcome">Welcome to World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="like_btn">Like</string>
    <string name="start_tv">00 : 00</string>
    <string name="end_tv">Loading…</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to,\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="mins_15">15 Minutes</string>
    <string name="mins_30">30 Minutes</string>
    <string name="mins_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="delete_button">Delete Button</string>
    <string name="your_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e Suggestion, error etc</string>
    <string name="email_feedback">Email Address (optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On âž• To Create New Playlist. </string>
    <string name="play_next_btn">Play Next Button</string>
</resources>