<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back_btn"
            app:tint="?colorOnPrimary"
            android:padding="10dp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="?colorOnPrimary"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/like_btn"
            android:src="@drawable/favorite_empty_icon"
            app:tint="@android:color/holo_red_dark" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImagePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:src="@drawable/music_player_icon_splash_screen"
        app:shapeAppearanceOverlay="@style/Curved"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:gravity="center"
        android:textColor="?colorOnPrimary"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textIsSelectable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="30dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="40dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/Curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
           android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekBarStartTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tv"
            android:textColor="?colorOnPrimary"
            android:layout_gravity="center"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/seekBarEndTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_tv"
            android:textColor="?colorOnPrimary"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/repeat_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            app:tint="@color/button_color"/>

        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/equalizer_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"
            app:tint="@color/button_color" />

        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/timer_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"
            app:tint="@color/button_color" />

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/share_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"
            app:tint="@color/button_color" />

        <ImageButton
            android:id="@+id/boosterBtnPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/volume_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"
            app:tint="@color/button_color" />


    </LinearLayout>

</LinearLayout>