<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/teal_700"
            android:layout_margin="8dp"
            android:contentDescription="@string/mins_15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mins_15"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/teal_700"
            android:layout_margin="8dp"
            android:contentDescription="@string/mins_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mins_30"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/teal_700"
            android:layout_margin="8dp"
            android:contentDescription="@string/mins_60" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mins_60"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>