<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/set_theme"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tealTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/teal_200" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/purpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_700" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/greenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/green" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_icon"
            android:tint="@color/teal_700"
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/versionNameTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="@string/version_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="16dp"/>


</LinearLayout>